<resources>
    <string name="app_name">Calculadora Básica</string>
    <string name="txt_valor1">Primer valor</string>
    <string name="txt_valor2">Segundo valor</string>
    <string name="rb_sumar">Sumar</string>
    <string name="rb_restar">Restar</string>
    <string name="rb_producto">Multiplicar</string>
    <string name="rb_dividir">Dividir</string>
    <string name="boton">CALCULAR</string>
    <string name="tv_resultado">Resultado</string>
</resources>