<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/txt_valor1"
        android:inputType="number"
        android:textColor="#673AB7"
        android:textColorHint="#3F51B5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/txt_valor2"
        android:inputType="number"
        android:textColor="#FF9800"
        android:textColorHint="#FF5722"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2">

        <RadioButton
            android:id="@+id/rb_suma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_sumar"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rb_resta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_restar"
            android:textColor="#E91E63"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_producto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_producto"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

        <RadioButton
            android:id="@+id/rb_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_dividir"
            android:textColor="#FFEB3B"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />
    </RadioGroup>

    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="167dp"
        android:onClick="calcular"
        android:text="@string/boton"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="182dp"
        android:text="@string/tv_resultado"
        android:textColor="#009688"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton" />
</androidx.constraintlayout.widget.ConstraintLayout>